nonPH_analysis/MDS/logs/archives/breps_mds449586.err
  File "/scratch/tyoeasley/brain_representations/src_py/run_MDS.py", line 24
    for i in range(dist_mtx_array.shape[2]):
                                           ^
SyntaxError: invalid syntax
